--- a/ClassManagementSystem.API/ClassManagementSystem.API.csproj
+++ b/ClassManagementSystem.API/ClassManagementSystem.API.csproj
@@ -6,8 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\Jack.DataScience.Common\Jack.DataScience.Common.csproj" />
+    <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\Jack.DataScience.Console\Jack.DataScience.Console.csproj" />
+    <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\Jack.DataScience.Http.Jwt\Jack.DataScience.Http.Jwt.csproj" />
+    <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\Jack.DataScience.Logging.Serilog\Jack.DataScience.Logging.Serilog.csproj" />
+    <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\MvcAngular.Generator\MvcAngular.Generator.csproj" />
+    <ProjectReference Include="..\ClassManagementSystem.Data\ClassManagementSystem.Data.csproj" />
   </ItemGroup>
 
 </Project>
