--- a/ClassManagementSystem.API/ClassManagementSystem.API.csproj
+++ b/ClassManagementSystem.API/ClassManagementSystem.API.csproj
@@ -24,4 +24,16 @@
     <ProjectReference Include="..\ClassManagementSystem.Data\ClassManagementSystem.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.Production.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
