--- a/ClassManagementSystem.API/appsettings.Production.json
+++ b/ClassManagementSystem.API/appsettings.Production.json
@@ -16,7 +16,7 @@
     "ConnectionString": "Data Source=localhost,1433;Initial Catalog=classmanagementsystem;User ID=SA;Password=rootR0@t;"
   },
   "MongoOptions": {
-    "Url": "mongodb://localhost:27017",
+    "Url": "mongodb://192.168.1.154:27017",
     "Database": "classmanagementsystem",
     "SslProtocol": "None"
   },
