Add appsettings.json for ClassManagementSystem.Data
Add appsettings.json for ClassManagementSystem.Data

--- a/ClassManagementSystem.Data/ClassManagementSystem.Data.csproj
+++ b/ClassManagementSystem.Data/ClassManagementSystem.Data.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\..\Jack.DataScience\Jack.DataScience\Jack.DataScience.Data.MongoDB\Jack.DataScience.Data.MongoDB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
